@@ -1,3 +1,7 @@
+-New import/export format to share cards, which also bundles the media files.
+ Supports importing an updated version of the same exported cards, so that
+ authors can release updated versions of their cards fixing e.g. spelling
+ mistakes.
 -Fix bug where active tags would sometimes not have a checkbox in the card
  browser (reported by Gnome).
 -Made RTL handling for Arabic and Hebrew more robust.
